--- a/Hotel Management/ForgotPassword.resx
+++ b/Hotel Management/ForgotPassword.resx
@@ -2797,4 +2797,10 @@
         xuCpKuDGWaDjTMBtUoFV2Sxg4YbU5/WY3zeXqCg98wd1FXvM8xbYmPM8f+//2Q==
 </value>
   </data>
+  <metadata name="guna2DragControl1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>140, 17</value>
+  </metadata>
+  <metadata name="guna2DragControl2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>298, 17</value>
+  </metadata>
 </root>
